[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/slime/slime0001.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/slime/slime0000.png" type="Texture" id=3]
[ext_resource path="res://Enemies/SmolBuoy/SlimeFSM.tres" type="Resource" id=4]
[ext_resource path="res://Enemies/SmolBuoy/WalkAnimation.tres" type="Animation" id=5]
[ext_resource path="res://Enemies/SmolBuoy/AttackAnimation.tres" type="Animation" id=6]
[ext_resource path="res://Enemies/SmolBuoy/SmolBuoy.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 42.1809
height = 0.218262

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RayShape2D" id=3]
length = 131.207

[node name="SmolBuoy" instance=ExtResource( 2 )]
script = ExtResource( 7 )
touch_damage = 15
move_speed = 50.0
charge_distace = 50
attack_distance = 150

[node name="__ignore__" parent="." index="0"]
rotation = -1.57079

[node name="AnimationPlayer" parent="." index="1"]
anims/Attack = ExtResource( 6 )
anims/Walk = ExtResource( 5 )

[node name="Health" parent="." index="3"]
maxHealth = 30

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="FSM" parent="." index="5"]
state_machine = ExtResource( 4 )

[node name="WalkTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="RestTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="Sprites" parent="." index="8"]
position = Vector2( 1.77761, -13.9893 )
rotation = 0.18174
scale = Vector2( 5, 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprites" index="0"]
scale = Vector2( -1, 1 )
frames = SubResource( 2 )

[node name="Sight" type="Area2D" parent="." index="9"]

[node name="SightLine" type="CollisionShape2D" parent="Sight" index="0"]
rotation = -1.57079
shape = SubResource( 3 )

[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
